Update some dependencies

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-loader": "^7.1.5",
     "babel-minify": "^0.4.3",
     "babel-preset-env": "1.x.x",
+    "body-parser": "^1.18.3",
+    "boom": "^7.2.0",
     "chai": "4.x.x",
     "chromereload": "0.x.x",
     "debounce": "1.x.x",
@@ -42,7 +44,7 @@
     "gulp-if": "2.x.x",
     "gulp-imagemin": "3.x.x",
     "gulp-json-transform": "0.x.x",
-    "gulp-less": "3.x.x",
+    "gulp-less": "^4.0.1",
     "gulp-livereload": "3.x.x",
     "gulp-plumber": "1.x.x",
     "gulp-sass": "^3.x.x",
@@ -51,6 +53,10 @@
     "gulp-tag-version": "1.x.x",
     "gulp-util": "3.x.x",
     "gulp-zip": "^4.x.x",
+    "hawk": "^7.0.7",
+    "less": "^3.8.0",
+    "node-gyp": "^3.7.0",
+    "request": "^2.87.0",
     "require-dir": "0.x.x",
     "standard": "^10.0.2",
     "ts-loader": "^2.x.x",
