--- a/package.json
+++ b/package.json
@@ -23,7 +23,17 @@
     ]
   },
   "devDependencies": {
+    "@material/button": "^0.37.1",
+    "@material/checkbox": "^0.37.1",
+    "@material/form-field": "^0.37.1",
+    "@material/ripple": "^0.37.1",
+    "@material/textfield": "^0.37.1",
+    "@material/theme": "^0.35.0",
+    "@material/top-app-bar": "^0.37.1",
+    "@material/typography": "^0.37.1",
+    "@octokit/rest": "^15.9.4",
     "@types/chrome": "0.0.70",
+    "@types/material-components-web": "^0.35.0",
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
     "babel-loader": "^7.1.5",
@@ -54,6 +64,7 @@
     "gulp-util": "3.x.x",
     "gulp-zip": "^4.x.x",
     "hawk": "^7.0.7",
+    "jquery": "^3.3.1",
     "less": "^3.8.0",
     "node-gyp": "^3.7.0",
     "request": "^2.87.0",
@@ -67,9 +78,5 @@
     "webpack": "^3.12.0",
     "webpack-stream": "3.x.x",
     "yargs": "^8.x.x"
-  },
-  "dependencies": {
-    "@octokit/rest": "^15.9.4",
-    "jquery": "^3.3.1"
   }
 }
