--- a/app/manifest.json
+++ b/app/manifest.json
@@ -25,7 +25,7 @@
   "options_page": "pages/options.html",
   "options_ui": {
     "page": "pages/options.html",
-    "chrome_style": true
+    "open_in_tab": true
   },
   "permissions": [
     "tabs",
