--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "__MSG_appName__",
-  "short_name": "__MSG_appShortName__",
-  "description": "__MSG_appDescription__",
+  "name": "Github issue copy extension",
+  "short_name": "gh_issue_cp",
+  "description": "Copy github issue to another repository",
   "version": "0.2.1",
   "manifest_version": 2,
   "default_locale": "en",
