--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-      "module": "commonjs",
-      "target": "es5",
-      "noImplicitAny": true,
-      "noImplicitUseStrict": true,
-      "noImplicitReturns": true,
-      "strictNullChecks": true,
-      "jsx": "react",
-      "lib": ["dom", "es2017"]
+    "module": "commonjs",
+    "target": "es5",
+    "noImplicitAny": true,
+    "noImplicitUseStrict": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "jsx": "react",
+    "lib": [
+      "dom",
+      "es2017"
+    ]
   }
 }
