--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/register": "^7.0.0",
     "@material/button": "^0.37.1",
     "@material/checkbox": "^0.37.1",
     "@material/form-field": "^0.37.1",
@@ -31,52 +34,51 @@
     "@material/theme": "^0.35.0",
     "@material/top-app-bar": "^0.37.1",
     "@material/typography": "^0.37.1",
-    "@octokit/rest": "^15.9.4",
+    "@octokit/rest": "^16.18.1",
     "@types/chrome": "0.0.70",
     "@types/material-components-web": "^0.35.0",
-    "babel-cli": "6.x.x",
-    "babel-core": "6.x.x",
+    "@types/node": "^11.11.3",
     "babel-loader": "^7.1.5",
     "babel-minify": "^0.4.3",
     "babel-preset-env": "1.x.x",
     "body-parser": "^1.18.3",
-    "boom": "^7.2.0",
-    "chai": "4.x.x",
+    "boom": "^7.3.0",
+    "chai": "^4.2.0",
     "chromereload": "0.x.x",
-    "debounce": "1.x.x",
+    "debounce": "^1.2.0",
     "del": "3.x.x",
-    "gulp": "3.x.x",
+    "gulp": "^4.0.0",
     "gulp-bump": "2.x.x",
     "gulp-cache": "0.x.x",
-    "gulp-clean-css": "^3.x.x",
+    "gulp-clean-css": "^3.10.0",
     "gulp-filter": "^5.x.x",
-    "gulp-git": "^2.x.x",
+    "gulp-git": "^2.9.0",
     "gulp-if": "2.x.x",
-    "gulp-imagemin": "3.x.x",
-    "gulp-json-transform": "0.x.x",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-json-transform": "^0.4.6",
     "gulp-less": "^4.0.1",
-    "gulp-livereload": "3.x.x",
-    "gulp-plumber": "1.x.x",
+    "gulp-livereload": "^4.0.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^3.x.x",
     "gulp-sequence": "0.x.x",
-    "gulp-sourcemaps": "^2.x.x",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-tag-version": "1.x.x",
     "gulp-util": "3.x.x",
-    "gulp-zip": "^4.x.x",
-    "hawk": "^7.0.7",
+    "gulp-zip": "^4.2.0",
+    "hawk": "^7.0.10",
     "jquery": "^3.3.1",
-    "less": "^3.8.0",
-    "node-gyp": "^3.7.0",
-    "request": "^2.87.0",
+    "less": "^3.9.0",
+    "node-gyp": "^3.8.0",
+    "request": "^2.88.0",
     "require-dir": "0.x.x",
     "standard": "^10.0.2",
     "ts-loader": "^2.x.x",
-    "tslint": "^5.11.0",
-    "typescript": "^2.9.2",
-    "uglifyjs-webpack-plugin": "^1.2.7",
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.3333",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vinyl-named": "1.x.x",
     "webpack": "^3.12.0",
-    "webpack-stream": "3.x.x",
+    "webpack-stream": "^5.2.1",
     "yargs": "^8.x.x"
   }
 }
