--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/register": "^7.0.0",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/register": "^7.7.4",
     "@material/button": "^0.37.1",
     "@material/checkbox": "^0.37.1",
     "@material/form-field": "^0.37.1",
@@ -34,30 +34,30 @@
     "@material/theme": "^0.35.0",
     "@material/top-app-bar": "^0.37.1",
     "@material/typography": "^0.37.1",
-    "@octokit/rest": "^16.18.1",
+    "@octokit/rest": "^16.35.2",
     "@types/chrome": "0.0.70",
     "@types/material-components-web": "^0.35.0",
-    "@types/node": "^11.11.3",
+    "@types/node": "^11.15.3",
     "babel-loader": "^7.1.5",
     "babel-minify": "^0.4.3",
     "babel-preset-env": "1.x.x",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "chai": "^4.2.0",
     "chromereload": "0.x.x",
     "debounce": "^1.2.0",
     "del": "3.x.x",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-bump": "2.x.x",
     "gulp-cache": "0.x.x",
     "gulp-clean-css": "^3.10.0",
     "gulp-filter": "^5.x.x",
-    "gulp-git": "^2.9.0",
+    "gulp-git": "^2.10.0",
     "gulp-if": "2.x.x",
     "gulp-imagemin": "^5.0.3",
-    "gulp-json-transform": "^0.4.6",
+    "gulp-json-transform": "^0.4.7",
     "gulp-less": "^4.0.1",
-    "gulp-livereload": "^4.0.1",
+    "gulp-livereload": "^4.0.2",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^3.x.x",
     "gulp-sequence": "0.x.x",
@@ -66,19 +66,19 @@
     "gulp-util": "3.x.x",
     "gulp-zip": "^4.2.0",
     "hawk": "^7.0.10",
-    "jquery": "^3.3.1",
-    "less": "^3.9.0",
+    "jquery": "^3.4.1",
+    "less": "^3.10.3",
     "node-gyp": "^3.8.0",
     "request": "^2.88.0",
     "require-dir": "0.x.x",
     "standard": "^10.0.2",
-    "ts-loader": "^2.x.x",
-    "tslint": "^5.14.0",
-    "typescript": "^3.3.3333",
-    "uglifyjs-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^2.3.0",
+    "ts-loader": "^4.x.x",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3",
     "vinyl-named": "1.x.x",
-    "webpack": "^3.12.0",
+    "webpack": "^4.41.2",
     "webpack-stream": "^5.2.1",
-    "yargs": "^8.x.x"
+    "yargs": "^15.0.2"
   }
 }
